# ssot

./: .env.example  .gitignore  README.md  nx.json  package-lock.json  package.json
apps/gateway/: package.json
apps/model-diagram/backend/: project.json  pyproject.toml
apps/model-diagram/backend/app/: agent.py  agent_cli.py  agent_codex.py  agent_tools.py  callback.py  chat.py  chat_worker.py  cluster_settings.py  clusters.py  db.py  finalize.py  fsaccess.py  geometry.py  linecount.py  main.py  mcp_server.py  mlxp_config.py  mlxp_data_pod.py  paper.py  pathcheck.py  render.py  run_worker.py  runs.py  runtime_common.py  schemas.py  settings.py  spec.py  spec_with_stages.md  staging.py
apps/model-diagram/backend/tests/: conftest.py  test_agent_cli.py  test_agent_codex.py  test_callback.py  test_chat.py  test_db.py  test_finalize.py  test_fsaccess.py  test_geometry.py  test_linecount.py  test_mcp_server.py  test_memo.py  test_models.py  test_paper.py  test_pathcheck.py  test_render.py  test_reprovision.py  test_runtime.py  test_staging.py  test_worker.py
apps/openclaw/: .gitignore  (+1 more)
apps/openclaw/backend/: project.json  pyproject.toml
apps/openclaw/backend/app/: __init__.py  cli.py  instructions.py  main.py  models.py  pause_state.py  session_store.py  settings.py  transcript.py
apps/openclaw/backend/tests/: test_cli.py  test_transcript.py
apps/session-viewer/backend/: README.md  project.json  pyproject.toml
apps/session-viewer/backend/app/: __init__.py  board_store.py  cache.py  cleanup.py  main.py  models.py  settings.py  sources.py  transcript.py  trash.py
apps/session-viewer/backend/tests/: test_cache.py  test_cleanup.py  test_sources.py
(+512 files in other folders)
