[project]
name = "model-diagram-backend"
version = "0.1.0"
description = "Local FastAPI backend that generates click-to-code architecture diagrams of model codebases via the Anthropic API."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.9",
    "anthropic>=0.69",
    "pypdf>=5.1",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
