[project]
name = "openclaw-backend"
version = "0.1.0"
description = "Backend for the SSOT OpenClaw app: fronts the local openclaw CLI (status, sessions, transcripts, live logs, chat)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
